// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Tabs Compact 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fmBCVi dwxdYI"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hpSXsQ StyledTabs-sc-a4fwxl-2 dhCfhN sc-hJZKUC egvftP sc-ewSTlh fLwsxr"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 VjJEf StyledTabs__StyledTabsHeader-sc-a4fwxl-0 dgAlpm"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 dhZPjc"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jiARCy StyledTab-sc-1nnwnsb-0 cYFjUk"
          >
            <span
              class="StyledText-sc-1sadyjn-0 jyNumd"
            >
              Tab 1
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 dhZPjc"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bWKcbe StyledTab-sc-1nnwnsb-0 cYFjUk"
          >
            <span
              class="StyledText-sc-1sadyjn-0 jUyKlw"
            >
              Tab 2
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 dhZPjc"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bWKcbe StyledTab-sc-1nnwnsb-0 cYFjUk"
          >
            <span
              class="StyledText-sc-1sadyjn-0 jUyKlw"
            >
              Tab 3
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 dhZPjc"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bWKcbe StyledTab-sc-1nnwnsb-0 cYFjUk"
          >
            <span
              class="StyledText-sc-1sadyjn-0 jUyKlw"
            >
              This is a very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 dhZPjc"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bWKcbe StyledTab-sc-1nnwnsb-0 cYFjUk"
          >
            <span
              class="StyledText-sc-1sadyjn-0 jUyKlw"
            >
              This is another very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 dhZPjc"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bWKcbe StyledTab-sc-1nnwnsb-0 cYFjUk"
          >
            <span
              class="StyledText-sc-1sadyjn-0 jUyKlw"
            >
              And this is a third very long tab name testing
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="Tab 1 Tab Contents"
        class="StyledTabs__StyledTabPanel-sc-a4fwxl-1 eLcQnl"
        role="tabpanel"
      >
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw cuAIQb"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tabs Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fmBCVi dwxdYI"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hpSXsQ StyledTabs-sc-a4fwxl-2 dhCfhN sc-hJZKUC iBYnhm sc-ewSTlh fLwsxr"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 VjJEf StyledTabs__StyledTabsHeader-sc-a4fwxl-0 dgAlpm"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 dhZPjc"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jiARCy StyledTab-sc-1nnwnsb-0 cYFjUk"
          >
            <span
              class="StyledText-sc-1sadyjn-0 jyNumd"
            >
              Tab 1
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 dhZPjc"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bWKcbe StyledTab-sc-1nnwnsb-0 cYFjUk"
          >
            <span
              class="StyledText-sc-1sadyjn-0 jUyKlw"
            >
              Tab 2
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 dhZPjc"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bWKcbe StyledTab-sc-1nnwnsb-0 cYFjUk"
          >
            <span
              class="StyledText-sc-1sadyjn-0 jUyKlw"
            >
              Tab 3
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="Tab 1 Tab Contents"
        class="StyledTabs__StyledTabPanel-sc-a4fwxl-1 eLcQnl"
        role="tabpanel"
      >
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw cuAIQb"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Tabs With Long Titles 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fmBCVi dwxdYI"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hpSXsQ StyledTabs-sc-a4fwxl-2 dhCfhN sc-hJZKUC iBYnhm sc-ewSTlh fLwsxr"
      role="tablist"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 VjJEf StyledTabs__StyledTabsHeader-sc-a4fwxl-0 dgAlpm"
      >
        <button
          aria-expanded="true"
          aria-selected="true"
          class="StyledButton-sc-323bzc-0 dhZPjc"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jiARCy StyledTab-sc-1nnwnsb-0 cYFjUk"
          >
            <span
              class="StyledText-sc-1sadyjn-0 jyNumd"
            >
              This is a very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 dhZPjc"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bWKcbe StyledTab-sc-1nnwnsb-0 cYFjUk"
          >
            <span
              class="StyledText-sc-1sadyjn-0 jUyKlw"
            >
              This is another very long tab name
            </span>
          </div>
        </button>
        <button
          aria-expanded="false"
          aria-selected="false"
          class="StyledButton-sc-323bzc-0 dhZPjc"
          role="tab"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 bWKcbe StyledTab-sc-1nnwnsb-0 cYFjUk"
          >
            <span
              class="StyledText-sc-1sadyjn-0 jUyKlw"
            >
              And this is a third very long tab name
            </span>
          </div>
        </button>
      </div>
      <div
        aria-label="This is a very long tab name Tab Contents"
        class="StyledTabs__StyledTabPanel-sc-a4fwxl-1 eLcQnl"
        role="tabpanel"
      >
        <div
          class="sc-fKVqWL hOcWtv sc-bBHxTw cuAIQb"
        >
          Here is tab #1
        </div>
      </div>
    </div>
  </div>
</div>
`;
